--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
     "@types/styled-components": "^5.1.26",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
+    "prismic-javascript": "^3.0.2",
+    "prismic-reactjs": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.6.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/next": "^0.1.7",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
@@ -26,6 +33,9 @@
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "@prismicio/types": "^0.2.3",
+  "prismic-ts-codegen": "^0.1.5",
+  "slice-machine-ui": "^0.5.1"
   }
 }
