--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.1",
     "@react-icons/all-files": "^4.1.0",
     "@types/styled-components": "^5.1.26",
     "keen-slider": "^6.8.2",
@@ -30,12 +32,18 @@
   "devDependencies": {
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.25.0",
+    "eslint": "^8.27.0",
     "eslint-config-next": "12.3.1",
     "typescript": "^4.8.4",
     "@prismicio/types": "^0.2.3",
-  "prismic-ts-codegen": "^0.1.5",
-  "slice-machine-ui": "^0.5.1"
+    "prismic-ts-codegen": "^0.1.5",
+    "slice-machine-ui": "^0.5.1",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.10"
   }
 }
