--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@prismicio/client": "^6.7.1",
+    "@prismicio/helpers": "^2.3.5",
+    "@prismicio/next": "^0.1.7",
+    "@prismicio/react": "^2.5.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.1",
     "@react-icons/all-files": "^4.1.0",
     "@types/styled-components": "^5.1.26",
@@ -23,29 +29,24 @@
     "react-dom": "18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.6.0",
-    "styled-components": "^5.3.6",
-    "@prismicio/client": "^6.7.1",
-    "@prismicio/helpers": "^2.3.5",
-    "@prismicio/next": "^0.1.7",
-    "@prismicio/react": "^2.5.0",
-    "@prismicio/slice-simulator-react": "^0.2.2",
-    "react-query": "^3.39.2"
+    "react-query": "^3.39.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.3",
     "@types/node": "^18.8.3",
     "@types/react": "^18.0.21",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.27.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "^4.8.4",
-    "@prismicio/types": "^0.2.3",
-    "prismic-ts-codegen": "^0.1.5",
-    "slice-machine-ui": "^0.5.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.10"
+    "eslint-plugin-react": "^7.31.10",
+    "prismic-ts-codegen": "^0.1.5",
+    "slice-machine-ui": "^0.5.1",
+    "typescript": "^4.8.4"
   }
 }
