--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --cache ",
+    "lint:fix": "next lint --cache --fix",
     "server": "npx json-server --port 3333 --watch server.json"
   },
   "dependencies": {
@@ -21,14 +22,12 @@
     "@radix-ui/react-tabs": "^1.0.1",
     "@react-icons/all-files": "^4.1.0",
     "@types/styled-components": "^5.1.26",
-    "antd": "^4.24.2",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
@@ -47,6 +46,8 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
     "prismic-ts-codegen": "^0.1.5",
     "slice-machine-ui": "^0.5.1",
     "typescript": "^4.8.4"
