--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "npx json-server --port 3333 --watch server.json"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@material-ui/core": "^4.12.4",
     "@prismicio/client": "^6.7.1",
     "@prismicio/helpers": "^2.3.5",
