--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start": "next start",
     "lint": "next lint --cache ",
     "lint:fix": "next lint --cache --fix",
-    "server": "npx json-server --port 3333 --watch server.json",
     "slicemachine": "start-slicemachine",
-    "prismic:types": "npx prismic-ts-codegen",
-    "prismic:sync": "npx @slicemachine/init"
+    "prismic:types": "prismic-ts-codegen",
+    "prismic:sync": "@slicemachine/init"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -28,7 +27,6 @@
     "@radix-ui/react-tabs": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
     "@react-icons/all-files": "^4.1.0",
-    "@types/styled-components": "^5.1.26",
     "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "prismic-dom": "^2.2.7",
@@ -39,26 +37,33 @@
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
     "react-query": "^3.39.2",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@prismicio/types": "^0.2.4",
     "@types/node": "^18.8.3",
     "@types/prismic-dom": "^2.1.1",
-    "@types/react": "^18.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@types/react": "^18.0.25",
+    "@types/styled-components": "^5.1.26",
+    "@types/yup": "^0.32.0",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^8.27.0",
+    "eslint": "^8.28.0",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
+    "json-server": "^0.17.1",
     "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "prismic-ts-codegen": "^0.1.5",
     "slice-machine-ui": "^0.5.2",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.0"
   }
 }
