--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-query": "^3.39.2",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
