--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start server": "npx json-server -p 7000 -w server.json",
     "lint": "next lint --cache ",
     "lint:fix": "next lint --cache --fix",
     "slicemachine": "start-slicemachine",
     "prismic:types": "prismic-ts-codegen",
     "prismic:sync": "@slicemachine/init"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -26,16 +28,22 @@
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
+    "@react-google-maps/api": "^2.4.1",
     "@react-icons/all-files": "^4.1.0",
+    "@types/googlemaps": "^3.43.3",
+    "@types/react-leaflet": "^2.8.2",
     "keen-slider": "^6.8.2",
+    "leaflet": "^1.9.3",
     "next": "12.3.1",
     "prismic-dom": "^2.2.7",
     "prismic-javascript": "^3.0.2",
     "prismic-reactjs": "^1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.0",
     "react-hook-form": "^7.39.3",
     "react-icons": "^4.6.0",
+    "react-leaflet": "^4.1.0",
     "react-loading-skeleton": "^3.1.0",
     "react-query": "^3.39.2",
     "styled-components": "^5.3.6",
@@ -65,6 +73,6 @@
     "prettier": "^2.7.1",
     "prismic-ts-codegen": "^0.1.5",
     "slice-machine-ui": "^0.5.2",
-    "typescript": "^4.9.0"
+    "typescript": "^4.1.2"
   }
 }
