--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "slicemachine": "start-slicemachine",
     "prismic:types": "prismic-ts-codegen",
     "prismic:sync": "@slicemachine/init"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "@prismicio/types": "^0.2.4",
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.8.3",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^18.0.25",
