--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "slicemachine": "start-slicemachine",
     "prismic:types": "prismic-ts-codegen",
     "prismic:sync": "@slicemachine/init"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
@@ -25,6 +24,7 @@
     "@prismicio/slice-simulator-react": "^0.2.2",
     "@radix-ui/react-collapsible": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-popover": "1.0.2",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
