--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,6 +58,7 @@ jobs:
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: 'placeholder'
+          name: vm_frontend.pem
       - name: Adding Known Hosts
         run: ssh-keyscan -H ${{ secrets.FE_SERVER_IP }} >> ~/.ssh/known_hosts
       - name: Run deploy script
