--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -46,7 +46,6 @@ jobs:
       - name: Check codebase
         working-directory: .
         run: yarn build
-
   deploy:
 
     needs: build
@@ -54,11 +53,11 @@ jobs:
 
     steps:
       - name: Install SSH Key
-        uses: appleboy/ssh-action@v0.1.7
+        uses: shimataro/ssh-key-action@v2
         with:
-          host: ${{ secrets.FE_SERVER_IP }}
-          username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script_stop: true
-          script: ls -all
+          known_hosts: 'placeholder'
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.FE_SERVER_IP }} >> ~/.ssh/known_hosts
+      - name: Run deploy script
+        run: ssh ubuntu@${{ secrets.FE_SERVER_IP }} bash deploy.sh
