add ignore dockerize and move styles past

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,15 @@
+config/nginx/
 .DS_Store
-.next
 node_modules
+.next
 .git/
 .gitignore
 .dockerignore
-Dockerfile
-docker-compose.yml
-nginx/    
+.vercel
+.husky
+.github
+.slicemachine
+prismic/
+prismic*
+scripts/
+docker/
